alterar titulo :memo:

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="content">
                 <hgroup>
                     <h1>Luan Oliveira</h1>
-                    <h2>Analyst | Developer </h2>
+                    <h2>Developer .NET | .NET CORE</h2>
                 </hgroup>
                 <p>
                     <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
