--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </hgroup>
                 <p>
                     <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
-                    <a href="mailto:victorluan17@hotmail.com">victorluan17@hotmail.com</a>
+                    <a href="mailto:luuan.oliveira@hotmail.com">luuan.oliveira@hotmail.com</a>
                     <strong><a href="Luan Oliveira - CV.pdf" target="_blank"><span class="small-caps">PDF</span></a></strong>
                 </p>
             </div>
