adicionar ajustes :art:

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
-<html class="no-js" lang="En-us">
+<!DOCTYPE html>
+<html class="no-js" lang="pt-br">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Luan Oliveira</title>
         <meta name="description" content="">
@@ -13,7 +13,6 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-
         <main>
             <img class="face" src="img/face.jpeg">
             <div class="content">
@@ -28,5 +27,5 @@
                 </p>
             </div>
         </main>
-    </body
+    </body>
 </html>
