--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </head>
     <body>
         <main>
-            <img class="face" src="img/face.jpeg">
+            <img class="face" src="img/face.png">
             <div class="content">
                 <hgroup>
                     <h1>Luan Oliveira</h1>
-                    <h2>Full Stack Developer</h2>
+                    <h2>Pleno Software Engineer</h2>
                 </hgroup>
                 <p>
                     <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
