--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html class="no-js" lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Luan Oliveira</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href="img/Rocket.png" sizes="32x32" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Luan Oliveira</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="img/Rocket.png" sizes="32x32" />
 
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <main>
-            <img class="face" src="img/face.png">
-            <div class="content">
-                <hgroup>
-                    <h1>Luan Oliveira</h1>
-                    <h2>Pleno Software Engineer</h2>
-                </hgroup>
-                <p>
-                    <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
-                    <a href="mailto:luuan.oliveira@hotmail.com">luuan.oliveira@hotmail.com</a>
-                    <strong><a href="Luan Oliveira - CV.pdf" target="_blank"><span class="small-caps">PDF</span></a></strong>
-                </p>
-            </div>
-        </main>
-    </body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:400,400i,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/normalize.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <main>
+      <img class="face" src="img/photo.jpg" />
+      <div class="content">
+        <hgroup>
+          <h1>Luan Oliveira</h1>
+          <h2>Programador</h2>
+        </hgroup>
+        <p>
+          <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
+          <a href="mailto:luuan.oliveira@hotmail.com"
+            >luuan.oliveira@hotmail.com</a
+          >
+          <strong
+            ><a href="Luan Oliveira - CV.pdf" target="_blank"
+              ><span class="small-caps">PDF</span></a
+            ></strong
+          >
+        </p>
+      </div>
+    </main>
+  </body>
 </html>
