--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </hgroup>
         <p>
           <a href="https://github.com/LuuanOliveira" target="_blank">GitHub</a>
-          <a href="mailto:luuan.oliveira@hotmail.com">luuan.dev@gmail.com</a>
+          <a href="mailto:luuan.dev@gmail.com">luuan.dev@gmail.com</a>
           <strong
             ><a href="Luan Oliveira - CV.pdf" target="_blank"
               ><span class="small-caps">PDF</span></a
